--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,29 +1,32 @@
 * {
   font-family: sans-serif;
 }
+body {
+  background-image: linear-gradient(60deg, #24d476, #608772, #e6f2ec);
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+}
 #heading {
-  background-color: lightgreen;
+  /background-color: lightgreen;
   padding: 10px;
   text-align: center;
 }
 #navigation {
-  background-color: lightblue;
+  /background-color: lightblue;
   padding: 12px;
   text-align: center;
 }
 #navigation a{
-  font-size: 1.2em;
+  font-size: larger;
+  display: inline-block;
   color: black;
   padding: 5px;
   text-decoration: none;
   border: 1px solid;
   border-radius: 5px;
-  line-height: 2;
+  line-height: 3;
+  margin: 1vh;
   white-space: pre;
   background-color: lightgray;
-}
-#content {
-  font-size: 1.2em;
-  padding: 10px;
-  background-color: lightgray;
+  width: 85vw;
 }
