--- a/indexStyle.css
+++ b/indexStyle.css
@@ -7,26 +7,24 @@ body {
   background-repeat: no-repeat;
 }
 #heading {
-  /background-color: lightgreen;
+  font-size: 1.3em;
   padding: 10px;
   text-align: center;
 }
 #navigation {
-  /background-color: lightblue;
-  padding: 12px;
   text-align: center;
 }
 #navigation a{
-  font-size: larger;
+  font-size: 1.5em;
   display: inline-block;
   color: black;
   padding: 5px;
   text-decoration: none;
   border: 1px solid;
   border-radius: 5px;
-  line-height: 3;
-  margin: 1vh;
-  white-space: pre;
+  line-height: 4;
+  margin: 2vh;
+  /white-space: pre;
   background-color: lightgray;
-  width: 85vw;
+  width: 72vw;
 }
