--- a/indexStyle.css
+++ b/indexStyle.css
@@ -3,7 +3,7 @@
 }
 body {
   background-image: linear-gradient(60deg, #24d476, #608772, #e6f2ec);
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 #heading {
