--- a/indexStyle.css
+++ b/indexStyle.css
@@ -3,10 +3,9 @@ html, body {
   font-family: sans-serif;
   padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
   background-image: linear-gradient(60deg, #24d476, #608772, #e6f2ec);
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #heading {
